<resources>
    <string name="app_name">Assignment_5</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="west_minster_london">West Minster, London</string>
    <string name="_3200_saft">3200 saft</string>
    <string name="_4_bathrooms">4 bathrooms</string>
    <string name="single_family_house">Single Family House</string>
    <string name="text_paragh">Our community tells real global stories about resistance and identity. Read reports on people whose voices experiences are rarely seen in mainstream media. 40+ language translations. Unbiased global news. Truly international news. Social justice news. The News International, published in broadsheet size, is the largest English language newspaper in Pakistan. It is published daily from Karachi, Lahore and Rawalpindi/Islamabad. The News International - latest news and breaking news about Pakistan, world, sports, cricket, business, entertainment, weather, education,</string>
</resources>
