<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/card_background_color"
    android:layout_margin="@dimen/card_margin"
    android:orientation="vertical"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image_house"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/hotel4"
                android:scaleType="fitXY" />
            <org.mmtextview.components.MMTextView
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/house_name"
                android:layout_margin="@dimen/card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/west_minster_london"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">
                <org.mmtextview.components.MMTextView
                    android:id="@+id/squarefeet_house"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3200_saft"/>
                <org.mmtextview.components.MMTextView
                    android:id="@+id/location_house"
                    android:layout_weight="3"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_bathrooms"/>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:padding="4dp"
            android:src="@drawable/ic_near_me_black_24dp" />
        <org.mmtextview.components.MMTextView
            android:id="@+id/house_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/card_margin"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:backgroundTint="@color/white"
            android:text="$ 12,000" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>